==> gdgly/stm32L151_nbiot_tmote_app_spot/Hardware/QMC5883L/hal_qmc5883l.c <==
#include "hal_qmc5883l.h"
#include "hal_iic.h"
#include "tmesh_algorithm.h"
#include "platform_config.h"
#include "platform_map.h"
#include "stm32l1xx_config.h"
#include "delay.h"
#include <stdlib.h>

static void QMC5883L_WriteByte(u8 ucRegAddr, u8 ucRegData)
{
	IIC_Start();														//发送起始信号
	
	IIC_Send_Byte(QMC5883L_SLAVE_ADDRESS_W);								//发送I2C从机地址写
	IIC_Wait_Ack();													//等待应答
	
	IIC_Send_Byte(ucRegAddr);											//发送待写入数据地址
	IIC_Wait_Ack();													//等待应答
	
	IIC_Send_Byte(ucRegData);											//发送需写入数据
	IIC_Wait_Ack();													//等待应答
	
	IIC_Stop();														//发送停止信号
}

static u8 QMC5883L_ReadByte(u8 ucRegAddr)
{
	u8 ucData;
	
	IIC_Start();														//发送起始信号
	
	IIC_Send_Byte(QMC5883L_SLAVE_ADDRESS_W);								//发送I2C从机地址写
	IIC_Wait_Ack();													//等待应答
	
	IIC_Send_Byte(ucRegAddr);											//发送待读取数据地址
	IIC_Wait_Ack();													//等待应答
	
	IIC_Start();														//发送起始信号
	
	IIC_Send_Byte(QMC5883L_SLAVE_ADDRESS_R);								//发送I2C从机地址读
	IIC_Wait_Ack();													//等待应答
	
	ucData = IIC_Read_Byte(0);											//读取数据
	
	IIC_Stop();														//发送停止信号
	
	return ucData;
}

void QMC5883L_Drdy_Init(void)
{
	GPIO_InitTypeDef GPIO_Initure;
	
	QMC_DRDY_RCC_GPIO_CLK_ENABLE();										//使能QMC DRDY GPIO 时钟
	
	GPIO_Initure.Pin = QMC_DRDY_PIN;										//PA11
	GPIO_Initure.Mode = GPIO_MODE_INPUT;									//输入
	GPIO_Initure.Pull = GPIO_PULLDOWN;										//下拉
	GPIO_Initure.Speed = GPIO_SPEED_HIGH;									//高速
	HAL_GPIO_Init(QMC_DRDY_GPIOx, &GPIO_Initure);
}

void QMC5883L_Drdy_DeInit(void)
{
	GPIO_InitTypeDef GPIO_Initure;
	
	QMC_DRDY_RCC_GPIO_CLK_ENABLE();										//使能QMC DRDY GPIO 时钟
	
	GPIO_Initure.Pin = QMC_DRDY_PIN;										//PA11
	GPIO_Initure.Mode = GPIO_MODE_INPUT;
	GPIO_Initure.Pull = GPIO_NOPULL;
	GPIO_Initure.Speed = GPIO_SPEED_HIGH;
	HAL_GPIO_Init(QMC_DRDY_GPIOx, &GPIO_Initure);
}

void QMC5883L_Discharge(void)
{
	GPIO_InitTypeDef GPIO_Initure;
	
	IIC_SCL_RCC_GPIO_CLK_ENABLE();
	IIC_SDA_RCC_GPIO_CLK_ENABLE();
	
	GPIO_Initure.Pin = IIC_SCL_PIN;													//IIC_SCL
	GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP;											//OUTPUT
	GPIO_Initure.Speed = GPIO_SPEED_HIGH;												//HIGH
	HAL_GPIO_Init(IIC_SCL_GPIOx, &GPIO_Initure);
	
	GPIO_Initure.Pin = IIC_SDA_PIN;													//IIC_SDA
	GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP;											//OUTPUT
	GPIO_Initure.Speed = GPIO_SPEED_HIGH;												//HIGH
	HAL_GPIO_Init(IIC_SDA_GPIOx, &GPIO_Initure);
	
	HAL_GPIO_WritePin(IIC_SCL_GPIOx, IIC_SCL_PIN, GPIO_PIN_RESET);							//IIC_SCL
	HAL_GPIO_WritePin(IIC_SDA_GPIOx, IIC_SDA_PIN, GPIO_PIN_RESET);							//IIC_SDA
	Delay_MS(3000);
	HAL_GPIO_WritePin(IIC_SCL_GPIOx, IIC_SCL_PIN, GPIO_PIN_SET);							//IIC_SCL
	HAL_GPIO_WritePin(IIC_SDA_GPIOx, IIC_SDA_PIN, GPIO_PIN_SET);							//IIC_SDA
}

void QMC5883L_Init(void)
{
	IIC_Init();														//IIC初始化
	
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_SOFT_REST);							//复位QMC5883L
	
	QMC5883L_WriteByte(0x0B, 0x01);
	QMC5883L_WriteByte(0x20, 0x40);
	QMC5883L_WriteByte(0x21, 0x01);
	
	/* 64滤波, 8高斯范围, 50Hz输出, 初始化为StandBy */
	QMC5883L_WriteByte(QMC5883L_CR1, QMC_OSR_64 | QMC_RANGE_8G | QMC_RATES_200HZ | QMC_MODE_STANDBY);
	/* 引脚中断使能, 数据读取完指针自动偏转失能 */
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_INT_ENABLE | QMC_POINT_ROLL_DISABLE);
	
#if QMC_DRDY_EXIT
	QMC5883L_Drdy_Exti_Init();											//QMC5883L引脚配置PA11高电平读取(中断)
#else
	QMC5883L_Drdy_Init();												//QMC5883L引脚配置PA11高电平读取(非中断)
#endif
}

unsigned char QMC5883L_ReadData_Simplify(void)
{
	u8 ucReadBuf[QMC_REG_MAG];
	u32 qmctimeover = 0;
	u8 ret = 0;
	
	while (1) {
		if (QMC_DRDY_READ() == 1) {
			for (int index = 0; index < QMC_REG_MAG; index++) {
				ucReadBuf[index] = QMC5883L_ReadByte(QMC_DATA_OUT_X_L + index);
			}
			qmctimeover = 0;
			break;
		}
		else {
			qmctimeover++;
			if (qmctimeover >= 10000) {									//超时处理
				break;
			}
		}
		
		Delay_US(10);
	}
	
	Qmc5883lData.X_Now = 0;
	Qmc5883lData.Y_Now = 0;
	Qmc5883lData.Z_Now = 0;
	
	if (qmctimeover == 0) {
		Qmc5883lData.X_Now = (int16_t)(ucReadBuf[1] << 8) | ucReadBuf[0];
		Qmc5883lData.Y_Now = (int16_t)(ucReadBuf[3] << 8) | ucReadBuf[2];
		Qmc5883lData.Z_Now = (int16_t)(ucReadBuf[5] << 8) | ucReadBuf[4];
		ret = 1;
	}
	
	return ret;
}
