==> gdgly/stm32L151_nbiot_tmote_app_workspace/hc32L196_nbiot_tmote_app_spot/Hardware/QMC5883L/hal_qmc5883l.c <==
#include "hc32l19x_config.h"
#include "platform_config.h"
#include "platform_map.h"
#include "hal_qmc5883l.h"
#include "delay.h"
#include "usart.h"
#include <stdlib.h>

static u8 QMC5883L_WriteByte(u8 ucRegAddr, u8 ucRegData)
{
	HC32_IIC0_Start();																	//发送起始信号
	
	HC32_IIC0_Send_Byte(QMC5883L_SLAVE_ADDRESS_W);											//发送I2C从机地址写
	HC32_IIC0_Wait_Ack();																//等待应答
	
	HC32_IIC0_Send_Byte(ucRegAddr);														//发送待写入数据地址
	HC32_IIC0_Wait_Ack();																//等待应答
	
	HC32_IIC0_Send_Byte(ucRegData);														//发送需写入数据数据
	HC32_IIC0_Wait_Ack();																//等待应答
	
	HC32_IIC0_Stop();																	//发送停止信号
	
	return 0;
}

static u8 QMC5883L_ReadByte(u8 ucRegAddr)
{
	u8 ucData;
	
	HC32_IIC0_Start();																	//发送起始信号
	
	HC32_IIC0_Send_Byte(QMC5883L_SLAVE_ADDRESS_W);											//发送I2C从机地址写
	HC32_IIC0_Wait_Ack();																//等待应答
	
	HC32_IIC0_Send_Byte(ucRegAddr);														//发送待读取数据地址
	HC32_IIC0_Wait_Ack();																//等待应答
	
	HC32_IIC0_Start();																	//发送起始信号
	
	HC32_IIC0_Send_Byte(QMC5883L_SLAVE_ADDRESS_R);											//发送I2C从机地址读
	HC32_IIC0_Wait_Ack();																//等待应答
	
	ucData = HC32_IIC0_Read_Byte(0);														//读取数据
	
	HC32_IIC0_Stop();																	//发送停止信号
	
	return ucData;
}

void QMC5883L_Drdy_Init(void)
{
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirIn;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdEnable;
	GPIO_Initure.enOD			= GpioOdDisable;
	GPIO_Initure.enCtrlMode		= GpioFastIO;
	Gpio_Init(QMC_DRDY_GPIOx, QMC_DRDY_PIN, &GPIO_Initure);
}

void QMC5883L_Drdy_DeInit(void)
{
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirIn;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdDisable;
	GPIO_Initure.enOD			= GpioOdDisable;
	GPIO_Initure.enCtrlMode		= GpioFastIO;
	Gpio_Init(QMC_DRDY_GPIOx, QMC_DRDY_PIN, &GPIO_Initure);
}

void QMC5883L_Discharge(void)
{
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirOut;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdDisable;
	GPIO_Initure.enOD			= GpioOdDisable;
	
	Gpio_Init(IIC0_SCL_GPIOx, IIC0_SCL_PIN, &GPIO_Initure);
	Gpio_Init(IIC0_SDA_GPIOx, IIC0_SDA_PIN, &GPIO_Initure);
	
	Gpio_SetAfMode(IIC0_SCL_GPIOx, IIC0_SCL_PIN, IIC0_SCL_AF);
	Gpio_SetAfMode(IIC0_SDA_GPIOx, IIC0_SDA_PIN, IIC0_SDA_AF);
	
	Gpio_ClrIO(IIC0_SCL_GPIOx, IIC0_SCL_PIN);
	Gpio_ClrIO(IIC0_SDA_GPIOx, IIC0_SDA_PIN);
	Delay_MS(3000);
	Gpio_SetIO(IIC0_SCL_GPIOx, IIC0_SCL_PIN);
	Gpio_SetIO(IIC0_SDA_GPIOx, IIC0_SDA_PIN);
}

void QMC5883L_Init(void)
{
	HC32_IIC0_Init();
	
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_SOFT_REST);
	
	Delay_MS(60);
	
	QMC5883L_WriteByte(QMC5883L_ADDR_PERIORC, QMC_PERIORC_VALUE);
	
	QMC5883L_WriteByte(QMC5883L_ADDR_CFGC, QMC_CFGC_VALUE);
	QMC5883L_WriteByte(QMC5883L_ADDR_CFGD, QMC_CFGD_VALUE);
	
	/* 64滤波, 8高斯范围, 200Hz输出, 初始化为StandBy */
	QMC5883L_WriteByte(QMC5883L_CR1, QMC_OSR_64 | QMC_RANGE_8G | QMC_RATES_200HZ | QMC_MODE_STANDBY);
	/* 引脚中断使能, 数据读取完指针自动偏转失能 */
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_INT_ENABLE | QMC_POINT_ROLL_DISABLE);
	
	QMC5883L_Drdy_DeInit();
}

void QMC5883L_ReadData_Simplify(short* x, short* y, short* z)
{
	u8 ucReadBuf[QMC_REG_MAG];
	
	timeMeterTypeDef qmcTimer;
	
	QMC5883L_Drdy_Init();
	
	HC32_TimeMeter_CountdownMS(&qmcTimer, 100);
	
	QMC5883L_Mode_Selection(QMC_MODE_CONTINOUS);
	
	while (HC32_TimeMeter_IsExpiredMS(&qmcTimer) != true) {
		if (QMC_DRDY_READ() == HIGH) {
			QMC5883L_MultiRead(QMC_DATA_OUT_X_L, QMC_REG_MAG, ucReadBuf);
			break;
		}
	}
	
	*x = (int16_t)(ucReadBuf[1] << 8) | ucReadBuf[0];
	*y = (int16_t)(ucReadBuf[3] << 8) | ucReadBuf[2];
	*z = (int16_t)(ucReadBuf[5] << 8) | ucReadBuf[4];
	
	QMC5883L_Mode_Selection(QMC_MODE_STANDBY);
	
	QMC5883L_ClearInsideData();
	
	QMC5883L_Drdy_DeInit();
}
